# where-is-my-shit

./: .dockerignore  .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  PROJECT.md  README.md  README_CN.md  SECURITY.md  TESTING.md  cliff.toml  docker-compose.yml  install-watcher.sh  justfile  package-lock.json  playwright.config.ts  pyproject.toml  pyrightconfig.json  requirements.txt  setup.sh  start.sh  test_config.json  test_config_2.json  uv.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.3-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/phases/01-core-engine/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-web-intelligence/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-dev-intelligence/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-UAT.md  03-VERIFICATION.md
.planning/phases/04-unified-interface/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-quality-ci-cd/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md
.planning/phases/06-security-core/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: PHASE12_VERIFICATION.md  cli-reference.md  embedding-providers.md  privacy.html  watcher-daemon.md
extension/: eslint.config.mjs  manifest.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts  webpack.config.js
extension/src/lib/: api.ts  (+4 more)
extension/tests/: api.test.ts  extractors.test.ts  fingerprint.test.ts  setup.ts  storage.test.ts
ralph/01-requirements/: brainstorm.md
ralph/02-prd/: PRD.md  prd.json
ralph/04-tech-design/: tech-spec.md
ralph/05-impl-plan/: plan.md
ralph/06-impl/: progress.md
ralph/07-testing/: test-report.md
ralph/08-verification/: sign-off.md
ralph/09-retrospective/: retro.md
scripts/: verify_core.sh
src/: cli.py
src/app/: main.py  mcp_server.py
src/static/: index.html  test.html
tests/: conftest.py  test_browse.py  test_compaction.py  test_config.py  test_content_quality.py  test_core_db.py  test_core_embeddings.py  test_cors_auth.py  test_export.py  test_health.py  test_import.py  test_ingest.py  test_knowledge_extraction.py  test_mcp_server.py  test_migration.py  test_reranker.py  test_schemas.py  test_search.py  test_smart_context.py  test_spa.py  test_stats.py  test_terminal.py  test_thread.py
tests/core/: test_auth.py
tests/e2e/: playwright.setup.ts
tests/integration/: conftest.py  test_api_auth.py
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.test.tsx  App.tsx
wims-watcher/: install.sh  requirements.txt  wims-watcher.service
wims-watcher/src/: client.py  config.py  main.py  parser.py  state.py  updater.py  version.py  watcher.py
wims-watcher/templates/: com.wims.watcher.plist.template  uninstall.sh.template  wims-watcher.service.template  wims-watcher.template
wims-watcher/tests/: test_claude_parser.py  verify_e2e.py
(+284 files in other folders)
