[project]
name = "where-is-my-shit"
version = "0.0.0-dev"
description = "AI-powered search for chat messages across platforms"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "lancedb>=0.5.0",
    "pylance>=0.5.0",
    "fastembed>=0.2.0",
    "sentence-transformers>=2.2.0",
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.1.0",
    "psutil>=5.9.0",
    "watchfiles>=0.21.0",
    "pyjwt>=2.12.0",
    "passlib[argon2]>=1.7.4",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
]
onnx = [
    "optimum[onnxruntime]>=1.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [".tmp_tools", ".fix_lint_venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    "E402",  # Module level import not at top of file (needed for sys.path manipulation in tests)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
