[project]
name = "where-is-my-shit"
version = "0.0.0-dev"
description = "AI-powered search for chat messages across platforms"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "lancedb>=0.30.2",
    "pylance>=4.0.0",
    "fastembed>=0.8.0",
    "sentence-transformers>=5.4.0",
    "structlog>=25.5.0",
    "python-json-logger>=4.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "psutil>=7.2.2",
    "watchfiles>=1.1.1",
    "pyjwt>=2.12.1",
    "passlib[argon2]>=1.7.4",
    "openai>=2.31.0",
    "fastmcp>=3.2.3",
    "python-multipart>=0.0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "ruff>=0.15.10",
]
onnx = [
    "optimum[onnxruntime]>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [".tmp_tools", ".fix_lint_venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    "E402",  # Module level import not at top of file (needed for sys.path manipulation in tests)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["src/static/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
]
